--- a/.github/workflows/pull-request-merged.yml
+++ b/.github/workflows/pull-request-merged.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   move-issue-card:
     # only run if PR is merged and target branch is staging (or if manually triggered)
-    if: github.event.pull_request.merged == true && (github.event.pull_request.base.ref == 'main' || github.event.pull_request.base.ref == 'staging')
+    # if: github.event.pull_request.merged == true && (github.event.pull_request.base.ref == 'main' || github.event.pull_request.base.ref == 'staging')
 
     permissions:
       issues: write
@@ -205,7 +205,7 @@ jobs:
 
             # get field value id for the target branch
             field_value_id = projectItem["node"]["project"]["field"]["staging"][0]["id"] if targetBranch == "staging" else projectItem["node"]["project"]["field"]["production"][0]["id"]
-            
+
             print("Issue linked to project: " + project_name)
             item_id = projectItem["node"]["id"]
             item_field_id = projectItem["node"]["project"]["field"]["id"]
