--- a/.github/workflows/pull-request-merged.yml
+++ b/.github/workflows/pull-request-merged.yml
@@ -184,7 +184,7 @@ jobs:
             },
           ]
 
-          if (count(issue["linkedBranches"]["edges"]) == 0):
+          if (len(issue["linkedBranches"]["edges"]) == 0):
             print("Issue is not linked to a branch, not moving cards")
             exit(0)
 
